changes to fix game on mobile

--- a/src/app/components/game/game.component.scss
+++ b/src/app/components/game/game.component.scss
@@ -27,7 +27,7 @@ body {
 
 #jet {
   position: absolute;
-  width: 8vw;
+  width: 8vh;
   height: 8vh;
   /*height: 40px;*/
   /*margin-left: auto;*/
@@ -37,10 +37,7 @@ body {
   background-repeat: no-repeat;
   /*display: flex;*/
   /*justify-content: center;*/
-  bottom: 0;
-  object-fit: fill;
-  min-width: 50px;
-  min-height: 50px;
+  bottom: 0px;
 }
 .jet-life i {
   color: white; /* Set the color of the heart icons to white */
@@ -59,14 +56,12 @@ body {
 
 .rocks {
   position: absolute;
-  top: 0;
-  //width: 100px;
-  //height: 100px;
+  top: 0px;
+  width: 9vh;
+  height: 9vh;
   background: url("/assets/alien.png");
   background-size: contain;
   background-repeat: no-repeat;
-  min-width: 50px;
-  min-height: 50px;
 }
 
 .coins {
@@ -93,7 +88,7 @@ body {
 
 #points {
   position: absolute;
-  top: 0;
+  top: 0px;
   /*margin: 5px;*/
   right: 5px;
   opacity: 0.7;
